assets/css/style.css
/* ... */
.button,
.button * {
	transition: background-color .15s ease, filter .15s ease, translate .3s ease, transform .3s ease;
}

.button>.button-text {
	pointer-events: none;
	font-size: 14px;
	font-weight: 700;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.button.right-arrow-icon {
	width: 16px;
	height: 16px;
	margin-top: 1px;
}

.button.icon-link {
	transition: transform 200ms ease-in-out;
}

.button.icon-link:hover .button.icon-link:focus-visible {
	cursor: pointer;
	stroke-width: 5;
	margin: 0;
	transform: rotate(15deg);
}

.button.filled {
	background: var(--button-filled-bg);
	border: none;
}

.button.filled>.button-text,
.button.filled>i {
	filter: invert(1);
}

.button.mini {
	font-size: 13px;
	padding: 5px 9px;
}

.button.mini>i {
	padding-bottom: 1px;
}

.button.mini>.button-text {
	font-size: 13px;
}

@media (hover: hover) {

	.button:hover,
	.button:focus-visible {
		background: var(--button-bg-hover);
	}

	.button:hover>i.move,
	.button:focus-visible>i.move {
		translate: 5px;
	}

	.button:hover>i.rotate,
	.button:focus-visible>i.rotate {
		transform: rotateZ(45deg);
	}

	.button:hover>*,
	.button:focus-visible>* {
		filter: invert(1);
	}

	.button.filled:hover,
	.button.filled:focus-visible {
		background: var(--button-filled-bg-hover);
	}

	.button.mini:hover>i.move,
	.button.mini:focus-visible>i.move {
		translate: 2px;
	}
}

@media (hover: none) {

	.button:active,
	.button:focus-visible {
		background: var(--button-bg-hover);
	}

	.button:active>i.move,
	.button:focus-visible>i.move {
		translate: 5px;
	}

	.button:active>i.rotate,
	.button:focus-visible>i.rotate {
		transform: rotateZ(45deg);
	}

	.button:active>*,
	.button:focus-visible>* {
		filter: invert(1);
	}

	.button.filled:active,
	.button.filled:focus-visible {
		background: var(--button-filled-bg-hover);
	}

	.button.mini:active>i.move,
	.button.mini:focus-visible>i.move {
		translate: 2px;
	}
}

/********************************************************************************
****************************** Prettier list style ******************************
/********************************************************************************/
ul,
ol {
	padding-left: 19px;
}

ul.prettier {
	margin: 0;
	padding-left: 0;
	text-align: left;
}

ul.prettier li:not(:last-of-type) {
	padding-bottom: 13px;
}

ul.prettier li::marker {
	content: '';
}

ul.prettier li::before {
	content: '\f054';
	font-family: 'Font Awesome 6 Free';
	font-size: inherit;
	color: inherit;
	margin-right: 7px;
}

/********************************************************************************
***************** Special case for XDA icon not in fontawesome ******************
/********************************************************************************/
.xda-icon {
	height: 100%;
	padding-top: 1px;
}

@media (prefers-color-scheme: dark) {
	.xda-icon {
		filter: invert(1);
		transition: none !important;
	}
}

/********************************************************************************
**************************** Sweetalert + CC styles *****************************
/********************************************************************************/
#cc--main {
	user-select: none;
}

html.swal2-shown {
	overflow-y: hidden;
}

html.swal2-height-auto {
	height: auto;
}

.show--settings {
	height: auto;
	overflow-y: hidden;
}

[class^=swal2] {
	box-shadow: none !important;
}

.c-bn:focus-visible,
.b-tl.exp:focus-visible,
.c-tgl:focus-visible,
.cc-link:focus-visible,
[class^=swal2] button:focus-visible {
	outline: 2px solid #2196F3;
}

@media (prefers-color-scheme: dark) {

	.c-bn:focus-visible,
	.b-tl.exp:focus-visible,
	.c-tgl:focus-visible,
	.cc-link:focus-visible,
	[class^=swal2] button:focus-visible {
		outline: 2px solid #1E88E5;
	}
}

#s-ttl {
	font-size: 1.3em !important;
}

#s-hdr,
#s-bns {
	border: none !important;
}

#s-bl {
	padding: 0 1.6em !important;
}

#s-cnt .p:first-child {
	margin-top: 0;
}

.cclike-container {
	user-select: none;
	padding: 0;
	background-color: var(--cc-overlay-bg);
	background: rgba(0, 0, 0, var(--cc-overlay-opacity));
}

.cclike-container.fadein {
	animation: .25s swal-fadein linear;
}

.cclike-container.fadeout {
	animation: .25s swal-fadeout linear;
}

.cclike-popup {
	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol !important;
	display: flex;
	flex-direction: column;
	max-height: min(37.5em, calc(100vh - 2.5em));
	width: 100%;
	max-width: min(92vw, 45em);
	padding: 0;
	background: var(--cc-bg) !important;
	border-radius: var(--cc-border-radius);
}

.cclike-title {
	padding: 28.5px 25.8px;
	font-size: 1.3em;
	text-align: left;
	color: var(--cc-text) !important;
}

.cclike-closebutton {
	position: absolute;
	width: 39.44px;
	height: 39.44px;
	right: 28px;
	top: 18.28px;
	font-size: 1.6em;
	font-weight: 400;
	background: var(--cc-btn-secondary-bg) !important;
	border-radius: var(--cc-btn-border-radius);
	color: var(--cc-btn-secondary-text) !important;
	transition: background-color .25s ease !important;
}

@media (hover: hover) {

	.cclike-closebutton:hover,
	.cclike-closebutton:active {
		background: var(--cc-btn-secondary-hover-bg) !important;
		color: var(--cc-btn-secondary-hover-text) !important;
	}
}

@media (hover: none) {

	.cclike-closebutton:active {
		background: var(--cc-btn-secondary-hover-bg) !important;
		color: var(--cc-btn-secondary-hover-text) !important;
	}
}

.cclike-htmlcontainer {
	margin: 0 !important;
	padding: 0 25.8px 1.06em 25.8px !important;
	overflow-y: overlay !important;
	font-size: 1em !important;
	text-align: initial !important;
	color: var(--cc-block-text) !important;
}

.cclike-htmlcontainer ul.prettier {
	font-size: 1.1em;
}
/* ... */

